<resources>
    <string name="app_name">Decentralized Data Marketplace</string>

    <string name="available_sensors">Available Sensors</string>
    <string name="sensor_data_capture_sessions">Stored Sensor Data Sessions</string>
    <string name="create_sensor_data_capture_for">Create Sensor Data Capture For:</string>
    <string name="include_location">Include location?</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="please_enable_location">Please enable location</string>
    <string name="please_permit_location">Please permit location</string>
    <string name="enter_session_capture_description">Enter session capture description</string>
    <string name="enter_sample_frequency">Sensor data sample frequency (milliseconds)</string>
    <string name="start_time_label">Start: </string>
    <string name="stop_time_label">Stop: </string>
    <string name="output_value_1_label">Output Value 1:</string>
    <string name="output_value_2_label">Output Value 2:</string>
    <string name="output_value_3_label">Output Value 3:</string>
    <string name="output_value_4_label">Output Value 4:</string>
    <string name="output_value_5_label">Output Value 5:</string>
    <string name="output_value_6_label">Output Value 6:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="marketplace_information_label">Marketplace Information</string>
    <string name="seller_label">Seller (*): </string>
    <string name="peripheral_sensor_label">Peripheral Sensor (*): </string>
    <string name="marketplace_description_label">Session Description (*): </string>
    <string name="hint_sensor_data_session_description">Sensor data session description</string>
    <string name="hint_description_for_buyers">Description for buyers</string>
    <string name="hint_sensor_description">Sensor type description</string>
    <string name="hint_latitude">Latitude for area of this sensor data</string>
    <string name="hint_longitude">Longitude for area of this sensor data</string>
    <string name="price_label">Price (in Iota *): </string>
    <string name="hint_price_in_iota">Purchase price for this sensor data</string>
    <string name="ip_address_label">IP Address (*): </string>
    <string name="hint_ip_address" translatable="false">192.168.0.1</string>
    <string name="public_ip_address_label">Public Hostname or IP Address (*): </string>
    <string name="hint_enter_an_accessible_ip_address_or_hostname" translatable="false">mydyndns1234.dyndns.com</string>
    <string name="register_btn_label">Post to Marketplace</string>
    <string name="no_sensor_data_available">No sensor data available</string>
    <string name="store_sensor_data_tab_label">Store Sensor Data</string>
    <string name="stored_sensor_data_tab_label">Stored Sensor Data</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="select_sensor_data_capture_sessions">Select a Sensor Data Session</string>
    <string name="empty">No sensor data sessions available</string>
    <string name="check_network_connection">Please check your network connection</string>
    <string name="enter_all_marketplace_information">Please enter all required marketplace information</string>
    <string name="start_server">Listen for Buyers</string>
    <string name="stop_server">Stop Listening for Buyers</string>
    <string name="server_started_message">Listening for buyers</string>
    <string name="server_stopped_message">No longer listening for buyers</string>
    <string name="server_error_message">Server reply error</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_load_test_addresses">Try test addresses</string>
    <string name="settings_load_test_addresses_key" translatable="false">load_default_settings</string>
    <string name="settings_load_test_addresses_summary">Load test addresses (Wallets may not be funded)</string>
    <string name="settings_ddm_category_label">Decentralized Data Marketplace (DDM)</string>
    <string name="settings_ddm_contract_address_label">DDM Marketplace Contract Address</string>
    <string name="settings_ddm_contract_address_key" translatable="false">ddm_marketplace_contract_address</string>
    <string name="settings_wallet_category_label">Wallets</string>
    <string name="settings_ethereum_private_key">Ethereum Wallet Private Key (Ropsten)</string>
    <string name="settings_ethereum_private_key_key" translatable="false">ethereum_wallet_private_key</string>
    <string name="settings_iota_seed">Iota Seed</string>
    <string name="settings_iota_seed_key" translatable="false">iota_seed</string>
    <string name="enter_ddm_and_ethereum">Please enter DDM Contract Address and Ethereum Key in Settings</string>
    <string name="enter_iota">Please enter Iota seed in Settings</string>
    <string name="marketplace_status_label">Marketplace Status</string>
    <string name="prior_posts_to_marketplace_label">Posts to Marketplace(s): </string>
    <string name="download_count_label">Download Count: </string>
    <string name="none">None</string>
    <string name="message_creating_file_from_sensor_data">Creating file from sensor data</string>
    <string name="message_uploading_to_ipfs">Uploading to IPFS</string>
    <string name="message_posting_to_contract">Posting to marketplace (could take 1-2 minutes)</string>
    <string name="message_successfully_posted">Successfully posted</string>
    <string name="message_successful_download">Successfully download: </string>
    <string name="delete_session">Delete Session</string>
    <string name="session_delete_confirmation_title">Session Delete Confirmation</string>
    <string name="session_delete_confirmation_message">Do you want to delete this session and its sensor data?</string>
    <string name="session_deleted_message">Session deleted!</string>
    <string name="low_storage_error">Device storage low, sensor data capture session closed</string>

</resources>
