<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SensorDataCaptureSessionDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_userSessionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_sessionSensorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/start_time_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_detail_sessionStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/stop_time_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_detail_sessionStopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <View style="@style/Divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:gravity="center_horizontal"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/marketplace_status_label" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prior_posts_to_marketplace_label"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_prior_posts_to_marketplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download_count_label"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_download_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/Divider"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:gravity="center_horizontal"
                        android:text="@string/marketplace_information_label"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_seller"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_description_for_buyers"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peripheral_sensor_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_peripheral_sensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_sensor_description"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marketplace_description_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_sensor_data_session_description"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_latitude"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_longitude"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_price_in_iota"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ip_address_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_ip_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_ip_address"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/public_ip_address_label"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_marketplace_ds_public_ip_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_enter_an_accessible_ip_address_or_hostname"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_register_to_marketplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:elevation="4dp"
                        android:text="@string/register_btn_label"
                        android:translationZ="4dp" />

                    <ProgressBar
                        android:id="@+id/progressbar_register_to_marketplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:indeterminate="true"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_user_message_contract_response"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                    <!--<Button
                        android:id="@+id/btn_connect_to_web3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Connect to Web3"/> -->

                </LinearLayout>


            </ScrollView>

        </LinearLayout>

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>